Money Manager 20.3.1
* JavaFX 14.0.1
* Drop binary support for Windows